Update : Added proper comments